@@ -1,5 +1,7 @@
 2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* eww.el (eww-submit): Get submit button logic right.
+
 	* shr.el (shr-final-table-render): New variable to signal when we're
 	doing the final table rendering so that we can collect more data at
 	that point.
